syntax = "proto3";

package user;

option go_package = "./";

service UserService {
  rpc GetUserByLogin(GetUserByLoginRequest) returns (GetUserByLoginResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message GetUserByLoginRequest {
  string login = 1;
}

message GetUserByLoginResponse {
  int64 id = 1;
  string login = 2;
  string name = 3;
  string email = 4;
}

message CreateUserRequest {
  string login = 1;
  string name = 2;
  string email = 3;
}

message CreateUserResponse {
  int64 id = 1;
  string login = 2;
  string name = 3;
  string email = 4;
}